python/src/register/manifests/register-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register
  labels:
    app: register
spec:
  replicas: 1
  selector:
    matchLabels:
      app: register
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: register
    spec:
      containers:
        - name: register
          image: bishnupoudel/register:sqlminimal
          imagePullPolicy: IfNotPresent
