python/src/register/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register
spec:
  selector:
    app: register
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
